--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ toml==0.10.1
 typed-ast==1.4.1
 urllib3==1.25.9
 virtualenv==20.0.31
+waitress==1.4.4
 whitenoise==5.1.0
 wrapt==1.12.1
 zipp==3.1.0
